[package]
edition      = "2024"
name         = "bme280-sensor"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "bme280-sensor"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["defmt", "esp32c6", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c6",
] }

defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32c6"] }

embassy-net = { version = "0.7.1", features = [
  "defmt",
  "dhcpv4",
  "dns",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-backtrace = { version = "0.18.1", features = [
  "defmt",
  "esp32c6",
  "panic-handler",
] }
esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32c6"] }
# for more networking protocol support see https://crates.io/crates/edge-net
bt-hci = "0.6.0"
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
esp-radio = { version = "0.17.0", features = [
  "ble",
  "coex",
  "defmt",
  "esp-alloc",
  "esp32c6",
  "smoltcp",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
trouble-host = { version = "0.5.1", features = ["gatt", "derive"] }
sntpc = { version = "0.7.0", default-features = false, features = [
    "embassy-socket",
] }

critical-section = "1.2.0"
static_cell      = "2.1.1"
embedded-hal-bus = {version = "0.3.0", features = ["async"]}
embedded-hal-async = "1.0.0"
embassy-sync = { version = "0.7.2", features = ["defmt"] }
heapless = { version = "0.9.2", features = ["alloc", "defmt"] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
rand_core = "*"
serde-json-core = { version = "0.6.0", features = ["defmt", "heapless"] }
serde = { version = "1.0.228", default-features = false }
serde_derive = "1.0.228"
mipidsi = "0.9.0"
embedded-hal = "1.0.0"
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
jiff = { version = "0.2.17", default-features = false, features = ["static"]}


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
